Breadcrums added security fixes Lang files updated

--- a/component/languages/admin/en-GB.com_admirorgallery.ini
+++ b/component/languages/admin/en-GB.com_admirorgallery.ini
@@ -9,8 +9,8 @@ CONTROL PANEL=Control Panel
 TEMPLATES=Templates
 POPUPS=Popups
 IMAGE MANAGER=Image Manager
-AG_APPLY DESC=APPLY<br />alt+a
-AG_RESET DESC=RESET<br />alt+r
+AG_APPLY DESC=APPLY<br />ctrl+enter
+AG_RESET DESC=RESET<br />ctrl+backspace
 COMPONENT VERSION:=Component Version:
 PLUGIN VERSION:=Plugin Version:
 BUTTON VERSION:=Button Version:
