--- a/component/languages/site/en-GB.com_admirorgallery.ini
+++ b/component/languages/site/en-GB.com_admirorgallery.ini
@@ -1,5 +1,5 @@
-AG_APPLY DESC=APPLY<br />alt+a
-AG_RESET DESC=RESET<br />alt+r
+AG_APPLY DESC=APPLY<br />ctrl+enter
+AG_RESET DESC=RESET<br />ctrl+backspace
 
 #Image Manager
 SHOW SIDEBAR=Show Sidebar
